--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         }
 
         #mail {
-            width: 25%;
+            width: 300px;
             height: 32px;
             border-radius: 30px;
             border: 1px solid rgb(241, 241, 241);
@@ -101,7 +101,7 @@
         }
 
         #submit {
-            width: 8%;
+            width:100px;
             color: white;
             height: 30px;
             border: 1px solid red;
@@ -109,8 +109,7 @@
             background-color: red;
             position: absolute;
             top: 303px;
-            left: 255px;
-
+            left: 279px;
         }
 
         img {
