--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
         #mail {
             width: 300px;
-            height: 32px;
+            height: 34.5px;
             border-radius: 30px;
             border: 1px solid rgb(241, 241, 241);
             text-indent: 10px;
@@ -108,8 +108,10 @@
             border-radius: 30px;
             background-color: red;
             position: absolute;
-            top: 303px;
+            top: 305px;
             left: 279px;
+           box-shadow: -3px 2px 8px 0px #000, 0px 0px 15px #858585;
+           cursor: pointer;
         }
 
         img {
